fix spacing on profile page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -319,3 +319,48 @@ label:hover:before {
   color: #aaaaaa;
   font-weight: bold;
 }
+
+/*user profile**/
+.img-center{
+  display: block;
+	margin: 0px auto;
+	text-align: center;
+}
+#img-profile{
+	padding: 19px;
+}
+.container #img-profile{
+	margin-top: 20px;
+  background-color: lightgrey;
+  padding-bottom: 1px;
+}
+.margin-img{
+	margin-right: 10px;
+
+}
+.text-center{
+	margin-top: 10px;
+}
+
+.text {
+  display: block;
+  margin-top: 21px;
+  padding-right: 40%;
+  padding-left: 2%;
+  padding-bottom: 10%;
+}
+
+#profile-color {
+    background-color: grey;
+}
+
+#past-score {
+  margin-top: 20%;
+  padding-left: 30px;
+
+}
+
+#global-score {
+  margin-top: 35%;
+  padding-left: 30px;
+}
